# absa-nlp

./: .gitignore  README.md  pyproject.toml  train_model.py  train_model_console_output.sh
dataset/: merge_and_split_dataset.py  merge_and_split_dataset_by_review.py  merge_and_split_dataset_by_sentence.py  teencode.txt  test_dataset.csv  test_dataset_by_sentence.csv  train_dataset.csv  train_dataset_by_sentence.csv  translate_AWARE_Games.py  translated_AWARE_Games_sentences.csv  val_dataset.csv
models/: .gitignore
