[tool.poetry]
name = "absa-nlp"
version = "0.1.0"
description = ""
authors = ["Quan <toolowner@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.9"
python-dotenv = "^1.0.1"
pre-commit = "3.5.0"
tensorflow = "2.5.0"
pandas = "1.3.3"
vncorenlp = "^1.0.3"
datasets = "^2.18.0"
transformers = "4.36.0"
nltk = "^3.8.1"
emoji = "^2.11.0"
openai = "0.28.1"
protobuf = "^3.20.0"
matplotlib = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
