[tool.poetry]
name = "absa-nlp"
version = "0.1.0"
description = ""
authors = ["Quan <toolowner@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.9"
python-dotenv = "^1.0.1"
pre-commit = "3.5.0"
tensorflow-io-gcs-filesystem = "0.33.0"
tensorflow = "2.13"
protobuf = "^3.20.0"
vncorenlp = "^1.0.3"
datasets = "^2.18.0"
emoji = "^2.11.0"
transformers = "4.36.0"
nltk = "^3.8.1"
pandas = "^2.0"
matplotlib = "^3.7"
openai = "0.28.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
