[tool.poetry]
name = "absa-nlp"
version = "0.1.0"
description = ""
authors = ["Quan <toolowner@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
python-dotenv = "^1.0.1"
pre-commit = "3.5.0"
tensorflow = "2.15"
protobuf = "^3.20.0"
vncorenlp = "^1.0.3"
datasets = "^2.18.0"
emoji = "^2.11.0"
transformers = "4.36.0"
nltk = "^3.8.1"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
openai = "^1.21.0"
scikit-learn = "^1.4.2"
pydot = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
